# xqw-mini-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  main.py  pyproject.toml  read_pdf.py
notes/: 2026-03-14.md  template.md
notes/excalidraw/: agent-loop-sequence.excalidraw
