[project]
name = "xqw-mini-agent"
version = "0.1.0"
description = "get shit done"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.28.0",
    "pdfplumber>=0.11.9",
    "pypdf>=6.8.0",
    "requests>=2.32.5",
    "tavily-python>=0.7.23",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
    "pre-commit>=4.5.1",
    "ruff>=0.15.6",
]

# Ruff 配置
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (由 formatter 处理)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Commitizen 配置
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
